  *) mod_proxy_wstunnel: Don't pool backend websockets connections,      because we need to handshake every time. PR 55890.      [Eric Covener]

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1587036 13f79535-47bb-0310-9956-ffa450edef68